# jarvis

./: .gitignore  README.md  pyproject.toml  vivado_pid834480.str
hardware/: makefile
hardware/bit/: flip_flop_xc7z010clg400-1.bit
hardware/hdl/: components.mk
hardware/hdl/components/: flip_flop.sv
hardware/hdl/interfaces/: uart_main.sv
hardware/hdl/misc/: template.sv
hardware/util/: path.py  verif.py
hardware/verif/py/: cocotb_runner.py
hardware/waves/interfaces/: uart_main.ron  uart_main.sv
hardware/xdc/components/: flip_flop_zybo.xdc
hardware/xsa/: flip_flop_xc7z010clg400-1.xsa
scripts/: export_hardware.tcl  setup.sh  synthesis_place_route.tcl
software/: args.tcl  build.py  flash.tcl  stop.tcl  vitis_journal.py
software/blinky/: blinky.xpr  blinky_wrapper.bit  blinky_wrapper.xsa  blinky_wrapper_2.xsa  blinky_wrapper_4.xsa  blinky_wrapper_5.xsa  blinky_wrapper_6.xsa
software/blinky/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_129646.py  workspace_journal_142521.py  workspace_journal_2090966.py  workspace_journal_240333.py  workspace_journal_257858.py  workspace_journal_312620.py
software/blinky/blink2/: vitis-comp.json
software/blinky/hw_export/: blinky_wrapper.xsa
software/blinky/platform/: vitis-comp.json
software/blinky/xgpio_example/: compile_commands.json  vitis-comp.json
software/blinky/xgpio_low_level_example/: compile_commands.json  vitis-comp.json
software/blinky_3/: blinky_3.xpr
software/blinky_3/_ide/: .peers.ini  (+1 more)
software/jarvis-software/: jarvis-software.xpr
(+1269 files in other folders)
