[project]
name = "jarvis"
version = "0.1.0"
description = ""
authors = [
    {name = "Drew Pang"},
    {name = "Richard Li"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cocotb = "^1.9.2"
cocotb-test = "^0.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

